2007-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, src/util.cxx:
  - Use strlcpy() instead of strncpy() where available
2007-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - freemem_result_data() needs PQXX_LIBEXPORT, thanks drankevich@cosmostv.by
 tools/pqxx-fulltest:
  - Use pqxx.org instead of full thaiopensource.org URL
  - Ensure that local postgres instance is private
 win32/vc-libpqxx.mak.template:
  - Replaced obsolete /GZ option with /RTC1, thanks Trigve Siver
2007-02-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, include/pqxx/transaction.hxx,
 include/pqxx/trigger.hxx, src/tablereader.cxx, src/tablewriter.cxx:
  - disable_noticer incorrectly qualified as internal::, thanks Trigve Siver
 include/pqxx/compiler-internal-pre.hxx:
  - Suppress warning that strncpy() "may be" unsafe, thanks Trigve Siver
 win32/vc-libpqxx.mak.template:
  - Always create lib directory, thanks Trigve Siver
  - Replace obsolete /GX compiler option with /EHsc, thanks Trigve Siver
2007-01-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/except.cxx, test/test000.cxx:
  - New mixin base class pqxx_exception, thanks Marcel Loose
 VERSION:
  - Bumped to 2.6.10
2007-01-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test010.cxx:
  - Work around gcc bug with -fprofile-arcs in string initializer
 tools/pqxx-fulltest:
  - Allow FTPSERVER and FTPDIR to be overridden
  - Keep log of postgres builds--may require packages to be installed
2007-01-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test000.cxx:
  - Test password encryption
 include/pqxx/cursor.hxx, test/test003.cxx:
  - Test cursor_base::close()
  - Made cursor fetch()/move() functions pure-virtual
  - Full test coverage
2007-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx:
  - Skip if backend version does not support prepared statements