@@ -8,7 +8,7 @@
  *   pqxx::trigger describes a database trigger to wait on, and what it does
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/trigger instead.
  *
- * Copyright (c) 2001-2006, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2007, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
